# strata

./: .gitignore  Cargo.toml  README.md
crates/strata-app/: Cargo.toml
crates/strata-app/src/: main.rs
crates/strata-app/src/app/: mod.rs
crates/strata-app/src/app/root_view/: mod.rs  panel_animation.rs
crates/strata-app/src/assets/: mod.rs
crates/strata-app/src/config/: countries.rs  io.rs  mod.rs  tests.rs  theme.rs
crates/strata-app/src/convert/: mod.rs
crates/strata-app/src/flight_io/: aircraft.rs  flights.rs  mod.rs
crates/strata-app/src/fsutil/: mod.rs
crates/strata-app/src/gridded_weather/: cache.rs  convert.rs  mod.rs  plan.rs
crates/strata-app/src/map_view/: gridded.rs  mod.rs
crates/strata-app/src/map_view/route_edit/: ghost.rs  hit.rs  machine.rs  mod.rs  snap.rs
crates/strata-app/src/sources/: elevation.rs  features.rs  magvar.rs  mod.rs  winds.rs
crates/strata-app/src/state/: briefing.rs  ingest.rs  ingest_progress.rs  mod.rs  weather_time.rs
crates/strata-app/src/state/flight/: compute.rs  mod.rs  ops.rs  render_route.rs  winds.rs
crates/strata-app/src/tile_sources/: mod.rs
crates/strata-app/src/ui/: info_panel.rs  layers_panel.rs  mod.rs  progress_panel.rs  search.rs  status_bar.rs  theme.rs  time_slider.rs
crates/strata-app/src/ui/aircraft_manager/: editor.rs  envelope.rs  fields.rs  mod.rs  plot.rs  validation.rs
crates/strata-app/src/ui/context_tabs/: envelope.rs  fuel.rs  loading.rs  mod.rs  tabs.rs  (+1 more)
crates/strata-brief/: Cargo.toml  README.md
crates/strata-brief/assets/: briefing.typ
crates/strata-brief/assets/fonts/: OFL.txt
crates/strata-brief/src/: lib.rs
crates/strata-brief/src/fixtures/: mod.rs
crates/strata-brief/src/input/: mod.rs  tests.rs
crates/strata-brief/src/render/: mod.rs  tests.rs
crates/strata-brief/src/world/: mod.rs
crates/strata-data/: Cargo.toml
crates/strata-data/src/: error.rs  lib.rs
crates/strata-data/src/decode/: elements.rs  metar.rs  mod.rs  taf.rs  time.rs
crates/strata-data/src/domain/: airac.rs  airport.rs  airspace.rs  country.rs  gridded.rs  mod.rs  navaid.rs  obstacle.rs  point.rs  vertical.rs  weather.rs
crates/strata-data/src/paths/: mod.rs
crates/strata-data/src/providers/: mod.rs
crates/strata-data/src/store/: hit_test.rs  meta.rs  mod.rs  records.rs  schema.rs  search.rs  terrain.rs  tests.rs
crates/strata-data/tests/: autorouter_never_logs_secrets.rs
crates/strata-ingest/: Cargo.toml
crates/strata-ingest/src/: cli.rs  config.rs  error.rs  events.rs  lib.rs  main.rs
crates/strata-ingest/src/console/: adapter.rs  mod.rs  report.rs  status.rs
crates/strata-ingest/src/inspect/: mod.rs
crates/strata-ingest/src/runner/: aero.rs  basemap.rs  elevation.rs  mod.rs  terrain.rs
crates/strata-plan/: Cargo.toml
crates/strata-plan/src/: lib.rs
crates/strata-plan/src/aircraft/: distances.rs  equipment.rs  fuel_system.rs  mod.rs  performance.rs  tests.rs  weight_balance.rs
crates/strata-plan/src/compute/: mod.rs  tests.rs
crates/strata-plan/src/conflict/: airspace.rs  clearance.rs  mod.rs  notam.rs  profile.rs  states.rs  tests.rs
crates/strata-plan/src/corridor/: airspaces.rs  geometry.rs  mod.rs  obstacles.rs  stations.rs  terrain.rs  tests.rs
crates/strata-plan/src/flight/: loading.rs  mod.rs  point.rs  policy.rs  snapshot.rs  tests.rs
crates/strata-plan/src/fpl/: format.rs  items.rs  mod.rs  tests.rs  validate.rs
crates/strata-plan/src/fuel/: mod.rs  tests.rs
crates/strata-plan/src/navlog/: frequency.rs  mod.rs  rows.rs  tests.rs
crates/strata-plan/src/notam_relevance/: mod.rs  tests.rs
crates/strata-plan/src/perf/: density.rs  isa.rs  mod.rs  phases.rs  runway.rs  tests.rs
crates/strata-plan/src/profile/: mod.rs  tests.rs
crates/strata-plan/src/route/: geo.rs  legs.rs  mod.rs  ops.rs  tests.rs
crates/strata-plan/src/sources/: mod.rs
crates/strata-plan/src/units/: mod.rs
crates/strata-plan/src/versioned/: mod.rs
crates/strata-plan/src/wb/: mod.rs  tests.rs
crates/strata-plan/src/wind/: aloft.rs  legs.rs  mod.rs  tests.rs  triangle.rs
crates/strata-render/: Cargo.toml
crates/strata-render/proptest-regressions/camera/: tests.txt
crates/strata-render/src/: lib.rs
crates/strata-render/src/basemap/: decode.rs  fallback.rs  labels.rs  mod.rs  pipeline.rs  tess.rs
crates/strata-render/src/camera/: mod.rs  tests.rs  viewport.rs
crates/strata-render/src/error/: mod.rs
crates/strata-render/src/features/: mod.rs
crates/strata-render/src/geo/: mod.rs
crates/strata-render/src/gpu/: mod.rs  shader.rs
crates/strata-render/src/input/: mod.rs
crates/strata-render/src/layer/: mod.rs
crates/strata-render/src/layers/: mod.rs  pipelines.rs  points.rs  polylabel.rs  style.rs  symbols.rs  tess.rs  tests_gpu.rs  weather.rs
crates/strata-render/src/map_theme/: adventure.rs  adventure_time.rs  alduin.rs  asciinema.rs  ayu_dark.rs  ayu_light.rs  catppuccin_frappe.rs  catppuccin_latte.rs  catppuccin_macchiato.rs  catppuccin_mocha.rs  colormap.rs  default_dark.rs  default_light.rs  everforest_dark.rs  everforest_light.rs  fahrenheit.rs  flexoki_dark.rs  flexoki_light.rs  gruvbox_dark.rs  gruvbox_light.rs  harper.rs  high_contrast.rs  hybrid_dark.rs  hybrid_light.rs  jellybeans.rs  kibble.rs  macos_classic_dark.rs  macos_classic_light.rs  matrix.rs  mellifluous_dark.rs  mellifluous_light.rs  mod.rs  molokai_dark.rs  molokai_light.rs  oldworld.rs  pastel_light.rs  solarized_dark.rs  solarized_light.rs  spaceduck.rs  tokyo_moon.rs  (+3 more)
crates/strata-render/src/renderer/: config.rs  mod.rs  target.rs
crates/strata-render/src/shaders/: basemap_tile.wgsl  common.wgsl  fill.wgsl  fill_airspace.wgsl  line.wgsl  line_dash.wgsl  raster_tile.wgsl  route_line.wgsl  route_ring.wgsl  symbol.wgsl  text.wgsl  weather.wgsl  weather_grid.wgsl
crates/strata-render/src/terrain/: cache.rs  decode.rs  mod.rs  selection.rs  style.rs
crates/strata-render/src/text/: atlas.rs  collide.rs  mod.rs  pipeline.rs  shape.rs
crates/strata-render/src/tiles/: mod.rs  tests.rs
crates/strata-render/src/workers/: mod.rs
crates/strata-render/tests/: smoke.rs
(+124 files in other folders)
